<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_nav_explore_modern"
        android:title="@string/nav_explore" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_nav_search_modern"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_nav_list_modern"
        android:title="@string/nav_list" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_nav_news_modern"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_modern"
        android:title="@string/nav_profile" />
</menu>